# labs

./: .gitignore  LICENSE  README.md  main.c  menu.c  menu.h  tests.c  tests.h  vector.c  vector.h  vectorComplex.c  vectorComplex.h  vectorFloat.c  vectorFloat.h
1 Semester/lab-1/src/: tests.c
1 Semester/lab-2/: .gitignore
1 Semester/lab-2/src/Tests/: tests.cpp
1 Semester/lab-3/src/BinarySearchTree/: BinarySearchTree.h
2 Semester/lab-2/src/ArraySequence/: ArraySequence.h
2 Semester/lab-2/src/DynamicArray/: DynamicArray.h
2 Semester/lab-2/src/LinkedList/: LinkedList.cpp  LinkedList.h
2 Semester/lab-2/src/ListSequence/: ListSequence.h
2 Semester/lab-2/src/Sequence/: Sequence.h
2 Semester/lab-3/src/Node/: Node.h
2 Semester/lab-3/src/Tests/: Tests.cpp
2 Semester/lab-3/src/UI/: UI.h
3 Semester/lab-1/: README.md
3 Semester/lab-1/src/: main.cpp
3 Semester/lab-1/src/Sorter/: Sorter.cpp  Sorter.h
Second Semester/lab-1/src/: tests.h  vector.h  vectorComplex.h  vectorFloat.h
Second Semester/lab-2/: .gitignore
Second Semester/lab-2/src/DynamicArray/: DynamicArray.cpp
Second Semester/lab-2/src/Node/: Node.h
Second Semester/lab-2/src/Sequence/: Sequence.h
Second Semester/lab-2/src/Tests/: tests.h
Second Semester/lab-3/: README.md
Second Semester/lab-3/src/: main.cpp
Second Semester/lab-3/src/BinarySearchTree/: BinarySearchTree.cpp  BinarySearchTree.h
Second Semester/lab-3/src/Node/: Node.h
semester-2/lab-1/src/: menu.h
semester-2/lab-2/: main.cpp
semester-2/lab-2/Tests/: tests.h
semester-2/lab-2/include/: ArraySequence.hpp  DynamicArray.hpp  LinkedList.hpp  ListSequence.hpp
semester-2/lab-2/src/ArraySequence/: ArraySequence.cpp  ArraySequence.h
semester-2/lab-2/src/DynamicArray/: DynamicArray.cpp  DynamicArray.h
semester-2/lab-2/src/LinkedList/: LinkedList.cpp  LinkedList.h
semester-2/lab-2/src/ListSequence/: ListSequence.cpp  ListSequence.h
semester-2/lab-2/src/Matrix/: Matrix.cpp
semester-2/lab-2/src/Sequence/: Sequence.h
semester-2/lab-3/src/: main
semester-2/lab-3/src/Tests/: Tests.h
semester-3/lab-1/: CMakeDoxygen.cmake  CMakeLists.txt  CatchAddTests.cmake  README.md  main.cpp
semester-3/lab-1/docs/: Doxyfile
semester-3/lab-1/include/: Sorter.hpp
semester-3/lab-1/src/: CMakeLists.txt  main.cpp
semester-3/lab-1/src/Sorter/: Sorter.cpp  Sorter.h
semester-3/lab-1/src/Tests/: quickSort.cpp  tests.cpp
semester-3/lab-1/src/UI/: UI.h
semester-3/lab-1/src/VectorSequence/: VectorSequence.h
semester-3/lab-1/tests/: CMakeLists.txt  merge_sort.cpp  quick_sort.cpp  sort_tests.cpp  tests.cpp
semester-3/lab-1/tests/ArraySequence/: insertion_sort.cpp  merge_sort.cpp  quick_sort.cpp
semester-3/lab-1/tests/ListSequence/: insertion_sort.cpp  merge_sort.cpp  quick_sort.cpp
semester-3/lab-2/: camera.h  game.cpp  game.h  lab-2.pro  mainwindow.cpp  mainwindow.h  navigation.cpp  position.h  resources.qrc
semester-3/lab-2/src/: ai.cpp  ai.h  camera.cpp  camera.h  game.cpp  game.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  navigation.h  position.h  tictactoemap.cpp  tictactoemap.h
semester-3/lab-2/tests/: game_test.h
semester-5/: .gitignore  README.md
semester-5/src/: base_expression.h  expression.h  function_types.h  log.h  main.cpp
semester-5/src/actions/: base_action.h  every_action.h  if_then_else_action.h  join_values_action.h  map_action.h  project_action.h  then_action.h
semester-5/src/base_expression/: base_expression.cpp  base_expression.h
semester-5/src/constructions/: base_construction.h
semester-5/src/expression/: base_expression.h  expression.cpp  expression.h
semester-5/src/statement/: base_statement.h  else_statement.h  if_statement.cpp  if_statement.h  then_statement.h
semester-5/src/statements/: base_statement.h  if_statement.h  switch_statement.h  then_statement.h
semester-5/src/tasks/: all_task.h  any_task.h  base_task.h  every_task.h  fold_task.h  if_then_else_task.h  join_values_task.h  map_task.h  project_task.h  switch_case_default_task.h  then_task.h  value_task.h
semester-5/src/utils/: function_types.h  log.h
src/: ArraySequence.cpp  ArraySequence.h  DynamicArray.cpp  DynamicArray.h  LinkedList.cpp  LinkedList.h  ListSequence.cpp  ListSequence.h  Matrix.h  Sequence.h  main.c  main.cpp  tests.cpp  tests.h
src/ArraySequence/: ArraySequence.cpp  ArraySequence.h
src/DynamicArray/: DynamicArray.cpp  DynamicArray.h
src/LinkedList/: LinkedList.h
src/ListSequence/: ListSequence.cpp  ListSequence.h
src/Matrix/: Matrix.cpp  Matrix.h
src/Sequence/: Sequence.h
src/Tests/: tests.cpp  tests.h
(+5 files in other folders)
